<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@mipmap/center_top_bg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_userhome_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/biz_pc_main_info_profile_avatar_bg_dark" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_home_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_user_home_score"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_home_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="@string/count" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorBlack"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18sp"
        android:text="@string/login_log" />

    <TextView
        android:scrollbars="vertical"
        android:singleLine="false"
        android:id="@+id/lv_user_log"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_user_home_exit"
        android:background="@color/colorRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:padding="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>
</LinearLayout>